--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bola de Ouro</title>
     <link rel="shortcut icon" href="/Bola-de-Ouro/img/ico.png" type="image/x-icon">
-    <link rel="stylesheet" href="/Bola-de-Ouro/css/portfolio.css">
+    <link rel="stylesheet" href="/Bola-de-Ouro/portfolio.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
