--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         nav {
             background-color: var(--bg-secondary);
             padding: 10px 0;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 4px var(--bg-secondary)
         }
 
         nav ul {
